fix: fix board initial size jump

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -54,6 +54,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #d2cfec;
 }
 
 .btn-container {
@@ -88,7 +89,8 @@ body {
 }
 
 .game-board {
-  /* position: relative; */
+  width: 408px;
+  height: 600px;
   background-color: #d2cfec;
   border-radius: var(--rad-m);
 }
